docs: add report

--- a/Lab 5-Spring 2025.ipynb
+++ b/Lab 5-Spring 2025.ipynb
@@ -485,13 +485,23 @@
    "source": [
     "#### 1. What are the common distance metrics used in distance-based classification algorithms? \n",
     "\n",
+    "-> Euclidean distance, Manhattan distance, Minkowski distance, Hamming distance, Cosine similarity, Jaccard similarity, Mahalanobis distance, etc.\n",
+    "\n",
     "#### 2. What are some real-world applications of distance-based classification algorithms? \n",
+    "\n",
+    "-> Examples include image recognition, recommendation systems, and customer segmentation.\n",
     "\n",
     "#### 3. Explain various distance metrics. \n",
     "\n",
+    "-> Euclidean distance: It is the most common distance metric. It is the straight-line distance between two points in Euclidean space. It is calculated as the square root of the sum of the squared differences between the coordinates of the two points.\n",
+    "\n",
     "#### 4. What is the role of cross validation in model performance? \n",
     "\n",
-    "#### 5. Explain variance and bias in terms of KNN? "
+    "-> Cross-validation is a technique used to evaluate the performance of a model. It involves splitting the dataset into multiple subsets, training the model on some of the subsets, and testing it on the remaining subset. This helps to assess the model's performance on unseen data and avoid overfitting.\n",
+    "\n",
+    "#### 5. Explain variance and bias in terms of KNN? \n",
+    "\n",
+    "-> Variance refers to the model's sensitivity to training data. A high variance model will change significantly when trained on different subsets of the data. Bias refers to the model's ability to capture the underlying patterns in the data. A high bias model may not be able to capture the complexity of the data. KNN is a high variance, low bias model, as it is sensitive to the training data and does not make strong assumptions about the underlying data distribution."
    ]
   }
  ],
