--- a/lab_5.ipynb
+++ b/lab_5.ipynb
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
     "\n",
     "# Applying the face detection method on the grayscale image. \n",
     "## Change the parameters for better detection of faces in your case.\n",
-    "faces_rect = face_cascade.detectMultiScale(gray_img, 1.05, 4, minSize=(25,25), maxSize=(50,50))\n",
+    "faces_rect = face_cascade.detectMultiScale(gray_img, scaleFactor=1.1, minNeighbors=5, minSize=(30, 30), flags=cv2.CASCADE_SCALE_IMAGE)\n",
     " \n",
     "# Define the text and font parameters\n",
     "text = \"Face Detected\" ## The text you want to write\n",
