--- a/lab_5.ipynb
+++ b/lab_5.ipynb
@@ -174,6 +174,9 @@
     "font_scale = 1  ## Font scale factor\n",
     "font_color = (0, 0, 255)  ## Text color in BGR format (here, it's red)\n",
     "font_thickness = 2  ## Thickness of the text\n",
+    "# Remove the cv2.imshow and cv2.waitKey to avoid kernel issues in Jupyter Notebook\n",
+    "# Instead, save the image and display it using matplotlib\n",
+    "\n",
     "\n",
     "  \n",
     "# Iterating through rectangles of detected faces\n",
@@ -183,10 +186,18 @@
     "    cv2.putText(img, text, (x, y-10), font, font_scale, font_color, font_thickness)\n",
     "\n",
     "## Display the image and window title should be \"Total number of face detected are #\"  \n",
-    "cv2.imshow(\"Total number of face detected are {}\".format(len(faces_rect)), img)\n",
+    "# cv2.imshow(\"Total number of face detected are {}\".format(len(faces_rect)), img)\n",
     "wandb.log({\"Total number of face detected are\": len(faces_rect)})\n",
-    "cv2.waitKey(0)\n",
-    "cv2.destroyAllWindows()"
+    "# cv2.waitKey(0)\n",
+    "# cv2.destroyAllWindows()\n",
+    "\n",
+    "\n",
+    "# Save the image to handle the workflow in Jupyter Notebook\n",
+    "cv2.imwrite(\"output/Plaksha_Faculty_detected.jpg\", img)\n",
+    "plt.imshow(cv2.cvtColor(img, cv2.COLOR_BGR2RGB))\n",
+    "plt.title(\"Total number of faces detected: {}\".format(len(faces_rect)))\n",
+    "plt.axis('off')\n",
+    "plt.show()"
    ]
   },
   {
