fix: cv2 imshow

--- a/lab_5.ipynb
+++ b/lab_5.ipynb
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,9 +340,9 @@
     "# Draw rectangles around the detected faces\n",
     "for (x, y, w, h) in template_faces:\n",
     "    cv2.rectangle(template_img, (x, y), (x + w, y + h), (0, 255, 0), 3)\n",
-    "cv2.imshow(\"Detected Faces\", template_img)\n",
-    "cv2.waitKey(0)\n",
-    "cv2.destroyAllWindows()\n",
+    "# cv2.imshow(\"Detected Faces\", template_img)\n",
+    "# cv2.waitKey(0)\n",
+    "# cv2.destroyAllWindows()\n",
     "\n",
     "\n",
     "cv2.imwrite(\"output/detected_faces.jpg\", template_img)\n",
