--- a/lab_5.ipynb
+++ b/lab_5.ipynb
@@ -188,11 +188,7 @@
     "    # Use cv2.putText to add the text to the image, Use text, font, font_scale, font_color, font_thickness here\n",
     "    cv2.putText(img, text, (x, y-10), font, font_scale, font_color, font_thickness)\n",
     "\n",
-    "## Display the image and window title should be \"Total number of face detected are #\"  \n",
-    "# cv2.imshow(\"Total number of face detected are {}\".format(len(faces_rect)), img)\n",
     "wandb.log({\"Total number of face detected are\": len(faces_rect)})\n",
-    "# cv2.waitKey(0)\n",
-    "# cv2.destroyAllWindows()\n",
     "\n",
     "\n",
     "# Save the image to handle the workflow in Jupyter Notebook\n",
@@ -422,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -482,8 +478,7 @@
     "plt.legend()  # Add a legend\n",
     "plt.grid(True)  # Add grid\n",
     "plt.show()  # Show the plot\n",
-    "wandb.log({\"Clusters and Centroids\": wandb.Image(plt)})\n",
-    "                                            ## End of the lab 5 ##"
+    "wandb.log({\"Clusters and Centroids\": wandb.Image(plt)})"
    ]
   },
   {
